# core-probe

./: .gitignore  AGENTS.md  Cargo.toml  README.md  mprime-rust-task.md
.sisyphus/: boulder.json
.sisyphus/evidence/: task-4-agesa-answer.txt  task-4-agesa-name.txt  task-4-regression.txt  task-5-benchmark-results.txt  task-5-regression.txt  task-5-tracing-output.txt
.sisyphus/plans/: fix-mprime-torture-test.md  unstable-cpu-detector.md
docs/: gui-mockup.html
src/: benchmark.rs  co_decoder.rs  co_heuristic.rs  co_offsets.rs  co_reader.rs  co_tier.rs  coordinator.rs  cpu_topology.rs  embedded.rs  error_parser.rs  gui.rs  gui_events.rs  gui_modal.rs  gui_qr.rs  gui_theme.rs  gui_widgets.rs  hii_extractor.rs  hii_question.rs  ifr_parser.rs  main.rs  mce_monitor.rs  mprime_config.rs  mprime_runner.rs  report.rs  signal_handler.rs  uefi_reader.rs
tests/: integration_test.rs
