[package]
name = "core-probe"
version = "0.1.0"
edition = "2021"

[dependencies]
argh = "0.1"
anyhow = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "time", "local-time"] }
core_affinity = "0.8"
sysinfo = "0.32"
uuid = { version = "1.0", features = ["v4"] }
nix = { version = "0.29", features = ["signal", "process", "user", "sched"] }
regex = "1.11"
ctrlc = "3.5"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
iced = { version = "0.14", features = ["tokio"] }
iced_anim = "0.3"
time = { version = "0.3", features = ["local-offset"] }
fast_qr = { version = "0.13", default-features = false }

[profile.release]
strip = true
lto = true

[dev-dependencies]
tempfile = "3.14"
qr_code = { version = "2.0", features = ["bmp", "decode"] }
